Change release date for Launcher Version 1.0.1
Updated the release date for version 1.0.1.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,3 @@
 Launcher Version 1.0.0 Released
 Launcher Version 1.0.1 Release Date: November 8TH 2025 [11/8/25]
+Launcher Version 1.0.1 Release Date Changed: November 2ND 2025 [11/2/25]
