--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
 Launcher Version 1.0.0 Released
 Launcher Version 1.0.1 Release Date: November 8TH 2025 [11/8/25]
 Launcher Version 1.0.1 Release Date Changed: November 2ND 2025 [11/2/25]
+Fixed Bug That Made The Changed Release Date For Launcher Version 1.0.1 Have The Date As 2ND November 2025 Instead Of 5TH November 2025   
+Launcher Version 1.0.1 Release Date Changed: November 5TH 2025 [11/5/25] [BUG FIX EDITION]
