Update changelog with Launcher Version 1.0.2 reminder
Added reminder for upcoming Launcher Version 1.0.2.

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,3 +5,4 @@ Fixed Bug That Made The Changed Release Date For Launcher Version 1.0.1 Have The
 Launcher Version 1.0.1 Release Date Changed: November 5TH 2025 [11/5/25] [BUG FIX EDITION]
 On Sunday We Will Start Working On Launcher Version 1.0.2 Wait Till We Have Version 1.0.2 In Testing!
 LAUNCHER VERSION 1.0.1 IS RELEASED!!!! WOOHOOO
+Launcher Version 1.0.2 Reminder! Its Coming To Testing Soon...
